@@ -1,0 +1,59 @@
+<?php
+// DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
+// This file was generated on 2010-02-01 04:21
+
+$extensionPath = t3lib_extMgm::extPath('templavoila');
+return array(
+	'tx_templavoila_access' => $extensionPath . 'class.tx_templavoila_access.php',
+	'tx_templavoila_api' => $extensionPath . 'class.tx_templavoila_api.php',
+	'tx_templavoila_cm1' => $extensionPath . 'cm1/index.php',
+	'tx_templavoila_extdeveval' => $extensionPath . 'class.tx_templavoila_extdeveval.php',
+	'tx_templavoila_handlestaticdatastructures' => $extensionPath . 'class.tx_templavoila_handlestaticdatastructures.php',
+	'tx_templavoila_htmlmarkup' => $extensionPath . 'class.tx_templavoila_htmlmarkup.php',
+	'tx_templavoila_rules' => $extensionPath . 'class.tx_templavoila_rules.php',
+	'tx_templavoila_tcemain' => $extensionPath . 'class.tx_templavoila_tcemain.php',
+	'tx_templavoila_unusedce' => $extensionPath . 'class.tx_templavoila_unusedce.php',
+	'tx_templavoila_usedce' => $extensionPath . 'class.tx_templavoila_usedce.php',
+	'tx_templavoila_xmlrelhndl' => $extensionPath . 'class.tx_templavoila_xmlrelhndl.php',
+	'tx_templavoila_div' => $extensionPath . 'classes/class.tx_templavoila_div.php',
+	'tx_templavoila_preview_default' => $extensionPath . 'classes/preview/class.tx_templavoila_preview_default.php',
+	'tx_templavoila_preview_type_bullets' => $extensionPath . 'classes/preview/class.tx_templavoila_preview_type_bullets.php',
+	'tx_templavoila_preview_type_header' => $extensionPath . 'classes/preview/class.tx_templavoila_preview_type_header.php',
+	'tx_templavoila_preview_type_html' => $extensionPath . 'classes/preview/class.tx_templavoila_preview_type_html.php',
+	'tx_templavoila_preview_type_image' => $extensionPath . 'classes/preview/class.tx_templavoila_preview_type_image.php',
+	'tx_templavoila_preview_type_list' => $extensionPath . 'classes/preview/class.tx_templavoila_preview_type_list.php',
+	'tx_templavoila_preview_type_menu' => $extensionPath . 'classes/preview/class.tx_templavoila_preview_type_menu.php',
+	'tx_templavoila_preview_type_multimedia' => $extensionPath . 'classes/preview/class.tx_templavoila_preview_type_multimedia.php',
+	'tx_templavoila_preview_type_null' => $extensionPath . 'classes/preview/class.tx_templavoila_preview_type_null.php',
+	'tx_templavoila_preview_type_text' => $extensionPath . 'classes/preview/class.tx_templavoila_preview_type_text.php',
+	'tx_templavoila_preview_type_textpic' => $extensionPath . 'classes/preview/class.tx_templavoila_preview_type_textpic.php',
+	'tx_templavoila_preview_type_uploads' => $extensionPath . 'classes/preview/class.tx_templavoila_preview_type_uploads.php',
+	'tx_templavoila_cm1_dsedit' => $extensionPath . 'cm1/class.tx_templavoila_cm1_dsedit.php',
+	'tx_templavoila_cm1_etypes' => $extensionPath . 'cm1/class.tx_templavoila_cm1_etypes.php',
+	'tx_templavoila_cm2' => $extensionPath . 'cm2/index.php',
+	'tx_templavoila_referenceelementswizard' => $extensionPath . 'func_wizards/class.tx_templavoila_referenceelementswizard.php',
+	'tx_templavoila_mod1_clipboard' => $extensionPath . 'mod1/class.tx_templavoila_mod1_clipboard.php',
+	'tx_templavoila_mod1_localization' => $extensionPath . 'mod1/class.tx_templavoila_mod1_localization.php',
+	'tx_templavoila_mod1_recordlist' => $extensionPath . 'mod1/class.tx_templavoila_mod1_recordlist.php',
+	'tx_templavoila_mod1_records' => $extensionPath . 'mod1/class.tx_templavoila_mod1_records.php',
+	'tx_templavoila_mod1_sidebar' => $extensionPath . 'mod1/class.tx_templavoila_mod1_sidebar.php',
+	'tx_templavoila_mod1_specialdoktypes' => $extensionPath . 'mod1/class.tx_templavoila_mod1_specialdoktypes.php',
+	'tx_templavoila_mod1_wizards' => $extensionPath . 'mod1/class.tx_templavoila_mod1_wizards.php',
+	'tx_templavoila_dbnewcontentel' => $extensionPath . 'mod1/db_new_content_el.php',
+	'tx_templavoila_module1' => $extensionPath . 'mod1/index.php',
+	'tx_templavoila_module2' => $extensionPath . 'mod2/index.php',
+	'tx_templavoila_newcewizard' => $extensionPath . 'newcewizard/class.tx_templavoila_newcewizard.php',
+	'tx_templavoila_contentelementdescriptor' => $extensionPath . 'newcewizard/model/class.tx_templavoila_contentelementdescriptor.php',
+	'tx_templavoila_basetab' => $extensionPath . 'newcewizard/tabs/class.tx_templavoila_basetab.php',
+	'tx_templavoila_favoritestab' => $extensionPath . 'newcewizard/tabs/class.tx_templavoila_favoritestab.php',
+	'tx_templavoila_fcetab' => $extensionPath . 'newcewizard/tabs/class.tx_templavoila_fcetab.php',
+	'tx_templavoila_formstab' => $extensionPath . 'newcewizard/tabs/class.tx_templavoila_formstab.php',
+	'tx_templavoila_menutab' => $extensionPath . 'newcewizard/tabs/class.tx_templavoila_menutab.php',
+	'tx_templavoila_pluginstab' => $extensionPath . 'newcewizard/tabs/class.tx_templavoila_pluginstab.php',
+	'tx_templavoila_recenttab' => $extensionPath . 'newcewizard/tabs/class.tx_templavoila_recenttab.php',
+	'tx_templavoila_standardelementstab' => $extensionPath . 'newcewizard/tabs/class.tx_templavoila_standardelementstab.php',
+	'tx_templavoila_tabview' => $extensionPath . 'newcewizard/view/class.tx_templavoila_tabview.php',
+	'tx_templavoila_pi1' => $extensionPath . 'pi1/class.tx_templavoila_pi1.php',
+	'tx_templavoila_api_testcase' => $extensionPath . 'tests/tx_templavoila_api_testcase.php',
+);
+?>
